add: about textbox

--- a/index.html
+++ b/index.html
@@ -21,22 +21,40 @@
         <ul class = "gnav__menu__item"><a href="#contact">Contact</a></ul>
     </nav>
 </header>
-<div class="uta" id="top">
-    <img src="static/img/Uta.PNG" alt="img">
+<div class="headback" id="top">
+    <img src="static/img/header.jpg" alt="img">
 </div>
 <div class="about" id="about">
     <h1>About</h1>
     <div class="textbox">
-        <p>Coming soon...</p>
+        <div class="prof">
+            <div><img src="static/img/Uta.PNG" alt="profile">
+                <div class ="name">
+                    <h2>Masaki</h2>
+                    <h4><a href="#contact">(<i>twitter:KaN0</i>)</a></h4>
+                </div>
+            </div>
+        </div>
+        <p>
+            大学２年生で情報工学科に所属しています。小さい頃からゲームが好きで、ゲームをしているうちに作り手にも興味を持ちました。
+            その思いから入学を決めました。大学に入ってからは、元々興味のあったゲームだけでなく様々なことに興味をもっています。
+            現在、ゲーム制作に携わるための勉強をしています。
+        </p>
     </div>
 </div>
 
 <div class="Achieves" id="achieves">
     <h1>Achieves</h1>
     <div class="textbox">
+        <h2><i>Program</i></h2>
         <p>Coming soon...</p>
     </div>
     <div class="textbox">
+        <h2><i>Modeling</i></h2>
+        <p>Coming soon...</p>
+    </div>
+    <div class="textbox">
+        <h2><i>illust</i></h2>
         <p>Coming soon...</p>
     </div>
 </div>
