--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>About</h1>
     <div class="textbox">
         <div class="prof">
-            <div><img src="static/img/Uta.PNG" alt="profile">
+            <div><img src="static/img/Uta.PNG" alt="icon">
                 <div class ="name">
                     <h2>Masaki</h2>
                     <h4><a href="#contact">(<i>twitter:KaN0</i>)</a></h4>
@@ -43,7 +43,7 @@
     </div>
 </div>
 
-<div class="Achieves" id="achieves">
+<div class="achieves" id="achieves">
     <h1>Achieves</h1>
     <div class="textbox">
         <h2><i>Program</i></h2>
