--- a/index.html
+++ b/index.html
@@ -47,15 +47,42 @@
     <h1>Achieves</h1>
     <div class="textbox">
         <h2><i>Program</i></h2>
-        <p>Coming soon...</p>
+        <div class="intextbox">
+            <p> VR開発中</p>
+            <div id="img">
+                <video autoplay muted src="static/img/RollerBall.mp4">
+            </div>
+        </div>
     </div>
     <div class="textbox">
-        <h2><i>Modeling</i></h2>
-        <p>Coming soon...</p>
+        <h2><i>3DModeling</i></h2>
+        <div class="intextbox">
+            <p> VRC想定モデル</p>
+            <div id="img">
+                <img src="static/img/model1.png">
+            </div>
+        </div>
+        <div class="intextbox">
+            <p> 製作中Unityゲーム用モデル</p>
+            <div id="img">
+                <img src="static/img/model2.png">
+            </div>
+        </div>
     </div>
     <div class="textbox">
-        <h2><i>illust</i></h2>
-        <p>Coming soon...</p>
+        <h2><i>Illust</i></h2>
+        <div class="intextbox">
+            <p> ゴーストダンス / Aqu3ra FA</p>
+            <div id="img">
+                <img src="static/img/GhostDance.PNG">
+            </div>
+        </div>
+        <div class="intextbox">
+            <p> 幽霊東京 / Ayase FA</p>
+            <div id="img">
+                <img src="static/img/GhostTokyo.PNG">
+            </div>
+        </div>
     </div>
 </div>
 
