--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="intextbox">
             <p> VR開発中</p>
             <div id="img">
-                <video autoplay muted src="static/img/RollerBall.mp4">
+                <video controls muted src="static/img/RollerBall.mp4">
             </div>
         </div>
     </div>
