remove: Twitter Link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<meta name=”viewport” content=”width=device-width,initial-scale=1.0,minimum-scale=1.0″>
 <link rel="stylesheet" type="text/css" href="static/css/main.css">
 <link rel="stylesheet" type="text/css" href="static/css/header.css">
 <link rel="stylesheet" type="text/css" href="static/css/footer.css">
@@ -36,9 +37,9 @@
             </div>
         </div>
         <p>
-            大学２年生で情報工学科に所属しています。小さい頃からゲームが好きで、ゲームをしているうちに作り手にも興味を持ちました。
-            その思いから入学を決めました。大学に入ってからは、元々興味のあったゲームだけでなく様々なことに興味をもっています。
-            現在、ゲーム制作に携わるための勉強をしています。
+            大学3年生で情報工学科に所属しています。小さい頃からゲームをプレイすることが好きで、ゲーム好きが転じて、作り手にも興味を持ちました。
+            これがきっかけで進学を決めました。大学に入ってからは、元々興味のあったゲーム制作だけでなくVRやAndroidアプリ開発など、様々なことに興味をもっています。
+
         </p>
     </div>
 </div>
@@ -87,16 +88,23 @@
 </div>
 
 <div class="skills" id="skills">
-    <h1>Skills</h1>
-    <div class="textbox">
-        <p>Coming soon...</p>
+    <h1>Skills , Interest</h1>
+    <div class="textbox-text" >
+        <h4>
+            Java</br>
+            Flutter</br>
+            C#</br>
+            Python</br>
+            Blender</br>
+            Unity</br>
+            HTML,CSS</br>
+        </h4>
     </div>
 </div>
 
 <div class = "contact" id="contact">
     <h1>Contact</h1>
     <nav class="contact__menu">
-        <ul>twitter<br><a class = "twitter" href="https://twitter.com/KaN0_uta" target="blank"><i class="fab fa-twitter-square fa-3x"></i></a></ul>
         <ul>Facebook<br><a class = "facebook" href="https://www.facebook.com/100056318441421" target="blank"><i class="fab fa-facebook-square fa-3x"></i></a></ul>
         <ul>note<br><a class = "note" href="https://note.com/u_masaki_ta" target="blank"><i class="far fa-file-alt fa-3x"></i></a></ul>
         <ul>github<br><a class = "git" href="https://github.com/U-Masaki-ta" target="blank"><i class="fab fa-github-square fa-3x"></i></a></ul>
